--- a/hwsc-fe/public/css/reset.css
+++ b/hwsc-fe/public/css/reset.css
@@ -171,3 +171,14 @@
   content: "\e7fa";
 }
 
+.clearfix{
+	*zoom:1;	
+}
+.clearfix:after{
+	content:'';
+	display:block;
+	height:0;
+	clear:both;
+	visibility:hidden;	
+}
+
